example-backend/dev/deployment.yaml
# ==========================================
# BACKEND APPLICATION: v002-example-backend
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v002-example-backend # Diawali huruf untuk standar DNS
  namespace: 999-testing-apps
  labels:
    app: v002-example-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: v002-example-backend
  template:
    metadata:
      labels:
        app: v002-example-backend
    spec:
      # WAJIB: Kunci untuk menarik image dari repo private devopsnaratel
      imagePullSecrets:
      - name: docker-hub-secret 
      containers:
      - name: api
        image: devopsnaratel/example-backend:build-16-a06b178-test
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: v002-example-backend-service # DNS-1035: Wajib diawali huruf
  namespace: 999-testing-apps
spec:
  selector:
    app: v002-example-backend
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
