example-backend/dev/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v002-postgres-testing
  namespace: 999-testing-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v002-postgres-testing
  template:
    metadata:
      labels:
        app: v002-postgres-testing
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
          subPath: pgdata # Menghindari folder lost+found
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: v002-postgres-pvc-longhorn
---
apiVersion: v1
kind: Service
metadata:
  name: v002-postgres-db-service # Hostname yang akan digunakan Backend
  namespace: 999-testing-apps
spec:
  selector:
    app: v002-postgres-testing
  ports:
  - port: 5432
